@@ -28,6 +28,7 @@ Boolean options:
  -c,  --color       Colored test output (default).
       --nocolor     Do not color test output.
  -D   --dry         Dry run. Show test that would have run.
+      --ext         Set the extension for tests (default '.t')
  -f,  --failures    Only show failed tests.
       --fork        Fork to run harness in multiple processes
  -m,  --merge       Merge test scripts' STDERR with their STDOUT.
