@@ -56,9 +56,10 @@ sub new {
             tests      => {},
             generation => 1
         },
-        select => [],
-        seq    => 1,
-        store  => delete $args{store},
+        select    => [],
+        seq       => 1,
+        store     => delete $args{store},
+        extension => delete $args{extension} || '.t',
     }, $class;
 
     my $store = $self->{store};
@@ -66,6 +67,19 @@ sub new {
       if defined $store && -f $store;
 
     return $self;
+}
+
+=head2 C<extension>
+
+Get or set the extension files must have in order to be considered
+tests. Defaults to '.t'.
+
+=cut
+
+sub extension {
+    my $self = shift;
+    $self->{extension} = shift if @_;
+    return $self->{extension};
 }
 
 sub DESTROY {
@@ -278,6 +292,7 @@ sub _get_raw_tests {
 
     # Do globbing on Win32.
     @argv = map { glob "$_" } @argv if NEED_GLOB;
+    my $extension = $self->{extension};
 
     for my $arg (@argv) {
         if ( '-' eq $arg ) {
@@ -289,22 +304,22 @@ sub _get_raw_tests {
         push @tests,
             sort -d $arg
           ? $recurse
-              ? $self->_expand_dir_recursive($arg)
-              : glob( File::Spec->catfile( $arg, '*.t' ) )
+              ? $self->_expand_dir_recursive( $arg, $extension )
+              : glob( File::Spec->catfile( $arg, "*$extension" ) )
           : $arg;
     }
     return @tests;
 }
 
 sub _expand_dir_recursive {
-    my ( $self, $dir ) = @_;
+    my ( $self, $dir, $extension ) = @_;
 
     my @tests;
     find(
         {   follow => 1,      #21938
             wanted => sub {
                 -f 
-                  && /\.t$/
+                  && /\Q$extension\E$/
                   && push @tests => $File::Find::name;
               }
         },
